--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Welcome to Potionfy</title>
   </head>
 <body>
-	<h1 style="color: red">Welcome to Potionfy!</h1>  
+	<h1 style="color: red">Welcome to Potionfy!</h1>
+  <form action="mailto:harry@potionfy.com" method="post" enctype="text/plain">
+Name: <br>
+  </form>  
 </body>
 </html>
