--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Welcome to Potionfy</title>
   </head>
 <body>
-	<h1 style="color: red">Welcome to Potionfy!</h1>  
-</body>
+	<h1 style="color: red">Welcome to Potionfy!</h1> 
 <form action="mailto:hermione@potionfy.com" method="post" enctype="text/plain">
 Name:<br>
     <input type="text" name="name"><br>
@@ -16,5 +15,7 @@ Name:<br>
     <input type="text" name="mail"><br>
     <input type="submit" value="Send">
     <input type="reset" value="Reset">
+</form> 
+</body>
 </form>
 </html>
