--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Name:<br>
     <input type="text" name="mail"><br>
     <input type="submit" value="Send">
     <input type="reset" value="Reset">
+//Here are some changes
 </form> 
 </body>
 </form>
